Actions
Bug #9633
opencxgbe should not reinvent the bool
Start date:
2018-06-30
Due date:
% Done:
50%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
usr/src/uts/common/io/cxgbe/t4nex/osdep.h has the following defined unconditionally:
typedef boolean_t bool; #define true B_TRUE #define false B_FALSE
which breaks the build if some of the system headers are modified to include <sys/stdbool.h>.
No data to display
Actions