9633 cxgbe should not reinvent the bool 16975 cxgbe: clean up osdep header 16976 cxgbe: shared header should be just that Reviewed by: Marco van Wieringen <marco.van.wieringen@planets.elm.net> Reviewed by: Dan McDonald <danmcd@mnx.io> Approved by: Joshua M. Clulow <josh@sysmgr.org>