usr/src/uts/common/io/cxgbe/t4nex/t4_sge.c
@@ -35,6 +35,7 @@
 #include <sys/strsun.h>
 #include <inet/ip.h>
 #include <inet/tcp.h>
+#include <sys/cmn_err.h>
 
 #include "version.h"
 #include "common/common.h"
@@ -68,6 +69,21 @@ struct txinfo {
 	mac_ether_offload_info_t meoi;	/* pkt hdr info for offloads */
 	struct ulptx_sgl sgl __attribute__((aligned(8)));
 	struct ulptx_sge_pair reserved[TX_SGL_SEGS / 2];
+};
+
+struct mblk_pair {
+	mblk_t *head, *tail;
+};
+
+struct rxbuf {
+	kmem_cache_t *cache;		/* the kmem_cache this rxb came from */
+	ddi_dma_handle_t dhdl;
+	ddi_acc_handle_t ahdl;
+	caddr_t va;			/* KVA of buffer */
+	uint64_t ba;			/* bus address of buffer */
+	frtn_t freefunc;
+	uint_t buf_size;
+	volatile uint_t ref_cnt;
 };
 
 static int service_iq(struct sge_iq *iq, int budget);
@@ -151,6 +167,12 @@ static int handle_sge_egr_update(struct sge_iq *, const struct rss_header *,
     mblk_t *);
 static int handle_fw_rpl(struct sge_iq *iq, const struct rss_header *rss,
     mblk_t *m);
+
+static kmem_cache_t *rxbuf_cache_create(struct rxbuf_cache_params *);
+static struct rxbuf *rxbuf_alloc(kmem_cache_t *, int, uint_t);
+static void rxbuf_free(struct rxbuf *);
+static int rxbuf_ctor(void *, void *, int);
+static void rxbuf_dtor(void *, void *);
 
 static inline int
 reclaimable(struct sge_eq *eq)
@@ -3565,4 +3587,119 @@ update_txq_kstats(kstat_t *ksp, int rw)
 	KS_U_FROM(csum_failed, txq);
 
 	return (0);
+}
+
+static int rxbuf_ctor(void *, void *, int);
+static void rxbuf_dtor(void *, void *);
+
+static kmem_cache_t *
+rxbuf_cache_create(struct rxbuf_cache_params *p)
+{
+	char name[32];
+
+	(void) snprintf(name, sizeof (name), "%s%d_rxbuf_cache",
+	    ddi_driver_name(p->dip), ddi_get_instance(p->dip));
+
+	return kmem_cache_create(name, sizeof (struct rxbuf), _CACHE_LINE_SIZE,
+	    rxbuf_ctor, rxbuf_dtor, NULL, p, NULL, 0);
+}
+
+/*
+ * If ref_cnt is more than 1 then those many calls to rxbuf_free will
+ * have to be made before the rxb is released back to the kmem_cache.
+ */
+static struct rxbuf *
+rxbuf_alloc(kmem_cache_t *cache, int kmflags, uint_t ref_cnt)
+{
+	struct rxbuf *rxb;
+
+	ASSERT(ref_cnt > 0);
+
+	rxb = kmem_cache_alloc(cache, kmflags);
+	if (rxb != NULL) {
+		rxb->ref_cnt = ref_cnt;
+		rxb->cache = cache;
+	}
+
+	return (rxb);
+}
+
+/*
+ * This is normally called via the rxb's freefunc, when an mblk referencing the
+ * rxb is freed.
+ */
+static void
+rxbuf_free(struct rxbuf *rxb)
+{
+	if (atomic_dec_uint_nv(&rxb->ref_cnt) == 0)
+		kmem_cache_free(rxb->cache, rxb);
+}
+
+static int
+rxbuf_ctor(void *arg1, void *arg2, int kmflag)
+{
+	struct rxbuf *rxb = arg1;
+	struct rxbuf_cache_params *p = arg2;
+	size_t real_len;
+	ddi_dma_cookie_t cookie;
+	uint_t ccount = 0;
+	int (*callback)(caddr_t);
+	int rc = ENOMEM;
+
+	if ((kmflag & KM_NOSLEEP) != 0)
+		callback = DDI_DMA_DONTWAIT;
+	else
+		callback = DDI_DMA_SLEEP;
+
+	rc = ddi_dma_alloc_handle(p->dip, &p->dma_attr_rx, callback, 0,
+	    &rxb->dhdl);
+	if (rc != DDI_SUCCESS)
+		return (rc == DDI_DMA_BADATTR ? EINVAL : ENOMEM);
+
+	rc = ddi_dma_mem_alloc(rxb->dhdl, p->buf_size, &p->acc_attr_rx,
+	    DDI_DMA_STREAMING, callback, 0, &rxb->va, &real_len, &rxb->ahdl);
+	if (rc != DDI_SUCCESS) {
+		rc = ENOMEM;
+		goto fail1;
+	}
+
+	rc = ddi_dma_addr_bind_handle(rxb->dhdl, NULL, rxb->va, p->buf_size,
+	    DDI_DMA_READ | DDI_DMA_STREAMING, NULL, NULL, &cookie, &ccount);
+	if (rc != DDI_DMA_MAPPED) {
+		if (rc == DDI_DMA_INUSE)
+			rc = EBUSY;
+		else if (rc == DDI_DMA_TOOBIG)
+			rc = E2BIG;
+		else
+			rc = ENOMEM;
+		goto fail2;
+	}
+
+	if (ccount != 1) {
+		rc = E2BIG;
+		goto fail3;
+	}
+
+	rxb->ref_cnt = 0;
+	rxb->buf_size = p->buf_size;
+	rxb->freefunc.free_arg = (caddr_t)rxb;
+	rxb->freefunc.free_func = rxbuf_free;
+	rxb->ba = cookie.dmac_laddress;
+
+	return (0);
+
+fail3:	(void) ddi_dma_unbind_handle(rxb->dhdl);
+fail2:	ddi_dma_mem_free(&rxb->ahdl);
+fail1:	ddi_dma_free_handle(&rxb->dhdl);
+	return (rc);
+}
+
+static void
+rxbuf_dtor(void *arg1, void *arg2)
+{
+	struct rxbuf *rxb = arg1;
+
+	(void) ddi_dma_unbind_handle(rxb->dhdl);
+	ddi_dma_mem_free(&rxb->ahdl);
+	ddi_dma_free_handle(&rxb->dhdl);
 }
